# GreenCode

./: README.md
api/: main.py  recsys.py  requirements.txt  run.sh  utils.py
api/app/: api.py
api/app/libs/broadcaster/: __init__.py  broadcaster.py
api/app/libs/broadcaster/db/: db.py  models.py  queries.py
db/: hack.sql
telegram_bot/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
telegram_bot/bot/: __init__.py  bot.py  register_handlers.py  set_default_commands.py  states.py
telegram_bot/bot/db/: __init__.py  models.py  queries.py
telegram_bot/bot/handlers/: __init__.py  cancel_handler.py  info_handler.py  start_handler.py
web/: index.php
web/admin/: index.php
web/admin/applications/: index.php  react.php
web/admin/css/: dia.css  script.js  style.css  users.css
web/admin/profiles/: index.php
web/admin/stats/: index.php
web/assets/: Parsedown.php  blocks.php  db.php  style.css
web/auth/: index.php
web/auth/reg/: index.php
web/auth/ya/: ya.php  yandex.php
web/event/: index.php
web/profile/: apply.php  get_events.php  index.php
web/profile/org/: create.php  index.php
web/rating/: index.php
